--- a/TreeColumnSelector/cp_project/codeproject_template.html
+++ b/TreeColumnSelector/cp_project/codeproject_template.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html><head>
-<!---------------------------------------------------------------------------> <!-- INTRODUCTION The Code Project article submission template (HTML version) Using this template will help us post your article sooner. To use, just follow the 3 easy steps below: 1. Fill in the article description details 2. Add links to your images and downloads 3. Include the main article text That's all there is to it! All formatting will be done by our submission scripts and style sheets. --> <!--------------------------------------------------------------------------><!-- IGNORE THIS SECTION --><title>The Code Project</title>
+<html><head><!---------------------------------------------------------------------------> <!-- INTRODUCTION The Code Project article submission template (HTML version) Using this template will help us post your article sooner. To use, just follow the 3 easy steps below: 1. Fill in the article description details 2. Add links to your images and downloads 3. Include the main article text That's all there is to it! All formatting will be done by our submission scripts and style sheets. --> <!--------------------------------------------------------------------------><!-- IGNORE THIS SECTION --><title>The Code Project</title>
+
+
 
 <style>
 BODY, P, TD { font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 10pt }
@@ -11,12 +12,7 @@ H4 { font-size: 10pt; color: black; }
 PRE { BACKGROUND-COLOR: #FBEDBB; FONT-FAMILY: "Courier New", Courier, mono; WHITE-SPACE: pre; }
 CODE { COLOR: #990000; FONT-FAMILY: "Courier New", Courier, mono; }
 </style>
-<link rel="stylesheet" type="text/css" href="http://www.codeproject.com/App_Themes/NetCommunity/CodeProject.css">
-</head>
-  
-
-
-<body color="#000000" style="background-color: rgb(255, 255, 255);">
+<link rel="stylesheet" type="text/css" href="http://www.codeproject.com/App_Themes/NetCommunity/CodeProject.css"></head><body color="#000000" style="background-color: rgb(255, 255, 255);">
 <!---->---------------------------------------------------------------------------&gt;
 <!------------------------------- STEP 1 --------------------------><!-- Fill in the details (CodeProject will reformat this section for you) -->
 <pre>Title: Article Title Goes Here<br>Author: Author Name <br>Email: author@email.com<br>Member ID: 12345<br>Language: C++, C# 2.0 etc<br>Platform: Windows, .NET 3.0 etc<br>Technology: ASP.NET, GDI+<br>Level: Beginner, Intermediate, Advanced<br>Description: An article on something-or-other<br>Section Suggest a section...<br>SubSection Suggest a subsection...<br>License: Choose your license (<a href="http://www.codeproject.com/info/licenses.aspx">CPOL, CPL, MIT, etc</a>)<br></pre>
@@ -32,14 +28,17 @@ XXX Kb</a></li>
 <!------------------------------- STEP 3 -------------------------->
 <!-- Add the article text. Please use simple formatting -->
 <h2>Introduction</h2>
-<p>I was needing a way to select what columns needed to be
-visible for a Mono/Gtk# application. There is no default right click
-select for the TreeView so I desided to use an empty column header
-similar to the way Mozilla's Thunderbird uses.</p>
+<p>I needed a way to select what columns needed to be
+visible for a Mono/Gtk# application. While there is an event for the
+header click of a TreeView it is only for the left click and used by
+default for sorting. Because was not able to find a simple way to sue a
+right click on the header I desided to use an empty column header
+similar to the method Mozilla's Thunderbird has for selecting visible
+columns.</p>
 <h2>Background (optional)</h2>
-<p>This article assume the reader has at least the basic concepts of
+<p>This article assumes the reader has at least the basic concepts of
 using the Gtk TreeView and a ListStore. If not there are some great
-started guides located at&nbsp;<a href="http://www.mono-project.com/">Mono-Project</a> web site located below under "Points of Interest".
+tutorials for the basics of the Gtk TreeView/ListStore located at&nbsp;<a href="http://www.mono-project.com/">Mono-Project</a> web site, specific tutorial links are located below under "Points of Interest".
 </p>
 <h2>Using the Code</h2>
 <p>A brief description of how to use the article or code. The
