--- a/ClientDialog/ClientDialog.html
+++ b/ClientDialog/ClientDialog.html
@@ -8,49 +8,59 @@
   
   <style type="text/css">
 #WinFrame {
-  border: 2px groove #000000;
+  border: 3px solid #000000;
   background-color: #428484;
 }
 #TitleBar {
-  border: 1px solid black;
+  border-bottom: 4px solid black;
+  border-left: 2px solid black;
+  border-right: 2px solid black;
+  border-top: 2px solid black;
+  background-color:#5675AB;
   cursor: move;
-  height: 25px;
-}
-#Content {
-  border: 2px solid black;
-  height: 345px;
-  float: left;
-  padding:5px;
-  background-color: #d4d0c8;
 }
 #TitleText {
   font-family: Arial,Helvetica,sans-serif;
   color: white;
-  float: left;
+  text-align:center;
   font-weight: bold;
+  clear:both;
   font-style: normal;
+  text-decoration:none;
+  vertical-align:sub;
   text-transform: capitalize;
-  text-align: center;
-  font-size: 12pt;
-  margin-top: 3px;
-  margin-bottom: 3px;
+  font-size: 11pt;
+}
+#Content {
+  border-bottom: 6px solid #808080;
+  border-left: 6px solid #808080;
+  border-right: 6px solid #808080;
+  border-top: 2px solid #808080;
+  height: 345px;
+  vertical-align:text-top;
+  padding:8px;
+  background-color: #F1F1ED;
 }
 #Close {
-  border: 2px solid #000000;
-  padding: 1px 2px;
+  border: 2px double #000000;
+  padding:1px 2px 1px 1px;
   font-style: normal;
   text-transform: uppercase;
-  color: #ff4221;
+  color: #000000;
+  clear:both;
   font-weight: bolder;
   text-align: center;
-  height: 18px;
-  width: 18px;
-  float: left;
-  font-family: DejaVu Sans;
-  font-size: 12pt;
-  margin-top: 1px;
-  margin-bottom: 1px;
-  background-color: #f6f8da;
+  height: 14px;
+  margin-right: 4px;
+  width: 14px;
+  float: right;
+  cursor: hand;
+  cursor: pointer;
+  font-family: Georgia;
+  font-size: 10pt;
+  margin-top: 2px;
+  margin-bottom: 2px;
+  background-color: #D4D0C8;
 }
 
   </style>
@@ -58,7 +68,7 @@
 <table id="WinFrame" cellpadding="0" cellspacing="0" width="650">
   <tbody>
     <tr>
-      <td id="TitleBar"><span id="TitleText">Title</span><span id="Close">X</span> </td>
+      <td align="center"  id="TitleBar"><span id="TitleText">Title</span><span id="Close">X</span> </td>
     </tr>
     <tr>
       <td id="Content">I am Content. </td>
