--- a/UtilityTools/BrowserInlinePopup/index.html
+++ b/UtilityTools/BrowserInlinePopup/index.html
@@ -3,8 +3,28 @@
     <head><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><title>Untitled Document</title>
 	<script src="ClientInlineDialog.js" id="jsClientDialog" type="text/javascript"></script></head>
     <body><h1>Popup Example</h1>
-        <p id="PElem">
             <input type="button" id="btnShowPopup" value="Show Pop Up" onclick="javascript:ShowInlineDialog('Test', 'PElem');" />
+        <p id="PElem">
         </p>
+		<br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/><br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/><br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/><br/>
+		<br/>
+		<br/>
+		<br/>
+		<br/><div style="white-space:nowrap;">Damaged beyond repair</div><div style="white-space:nowrap;">Not a RA</div>
+		<div id="divConsole">
+			<pre id="preConsole">HERE</pre>
+		</div>
     </body>
 </html>
