--- a/ASPdotNET_Tools/ClientSideFilter/TableFilter.html
+++ b/ASPdotNET_Tools/ClientSideFilter/TableFilter.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" >
+<head>
+    <title>Client Side Table Filter</title>
+    <meta content="-1" http-equiv="expires" />
+    <meta content="no-cache" http-equiv="cache-control" />
+    <meta content="no-cache" http-equiv="pragma" />
+    <link type="text/css" href="css/default.css" rel="Stylesheet" />
+    <script type="text/javascript" src="js/ClientSideFilter.js"></script>
+</head>
+<body>
+	<div id="divMain">
+		<div id="divInput">
+			Input form goes here
+		</div>
+		<div id="divTableData">
+			Table Data Goes Here
+		</div>
+	</div>
 
+</body>
+</html>
