--- a/jsShisenSho/index.html
+++ b/jsShisenSho/index.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-
-  <!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame 
-       Remove this if you use the .htaccess -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-<link type="text/css" href="css/default.css" />
-  <title>templates</title>
-  <meta name="description" content="" />
-  <meta name="author" content="andy" />
-
-  <meta name="viewport" content="width=device-width; initial-scale=1.0" />
-
-  <!-- Replace favicon.ico & apple-touch-icon.png in the root of your domain and delete these references -->
-  <link rel="shortcut icon" href="/favicon.ico" />
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-</head>
-
-<body>
-  <div>
-    <header>
-      <h1>templates</h1>
-    </header>
-    <nav>
-      <p><a href="/">Home</a></p>
-      <p><a href="/contact">Contact</a></p>
-    </nav>
-
-    <div>
-      this is a test
-    </div>
-
-    <footer>
-     <p>&copy; Copyright  by andy</p>
-    </footer>
-  </div>
-</body>
+	<head>
+		<meta charset="utf-8" />
+		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
+		Remove this if you use the .htaccess -->
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<link type="text/css" href="css/default.css" />
+		<title>Shisen-Sho (HTML5/JQuery)</title>
+		<meta name="description" content="An online Shisen-Sho game built with HTML5, CSS and JQuery" />
+		<meta name="author" content="Andy York" />
+		<link rel="shortcut icon" href="images/ShisenSho.ico" />
+	</head>
+	<body>
+		<div>
+			<header>
+				<h1>Shisen-Sho Online</h1>
+			</header>
+			<nav>
+				<div>
+					New Game
+				</div>
+				<div>
+					Open Game
+				</div>
+				<div>
+					Settings
+				</div>
+				<div>
+					Set Up
+				</div>
+				<div>
+					About
+				</div>
+			</nav>
+			<div>
+				this is a test
+			</div>
+			<footer>
+				<p>
+					&copy; Copyright  by andy
+				</p>
+			</footer>
+		</div>
+	</body>
 </html>
