--- a/ASPdotNET_Tools/jQueryResearch/CheckAll.html
+++ b/ASPdotNET_Tools/jQueryResearch/CheckAll.html
@@ -4,6 +4,7 @@
 		<title> JQuery Research Test Page </title>
 		<script src="js/jquery-1.7.min.js" type="text/javascript" id="jQuery"></script>
 		<script src="js/jQuery.CheckAll.js" type="text/javascript" id="jsCheckAll"></script>
+		<style type="text/css" id="cssDefault" src="css/default.css"></style>
 	</head>
 	<body style="color: rgb(255, 255, 102); background-color: rgb(94, 103, 132);" alink="#000099" link="#000099" vlink="#990099">
 		<form id="frmMain">
