--- a/jsShisenSho/index.html
+++ b/jsShisenSho/index.html
@@ -1,38 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 	<head>
-		<meta charset="utf-8" />
-		<!-- Always force latest IE rendering engine (even in intranet) & Chrome Frame
-		Remove this if you use the .htaccess -->
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-		<link type="text/css" href="css/default.css" />
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+		<link rel="stylesheet" type="text/css" href="css/default.css" />
 		<title>Shisen-Sho (HTML5/JQuery)</title>
 		<meta name="description" content="An online Shisen-Sho game built with HTML5, CSS and JQuery" />
 		<meta name="author" content="Andy York" />
-		<link rel="shortcut icon" href="images/ShisenSho.ico" />
+		<link rel="shortcut icon" href="images/ShisenSho.ico" type="image/x-icon" />
 	</head>
 	<body>
 		<div>
 			<header>
 				<h1>Shisen-Sho Online</h1>
 			</header>
-			<nav>
-				<div>
-					New Game
-				</div>
-				<div>
-					Open Game
-				</div>
-				<div>
-					Settings
-				</div>
-				<div>
-					Set Up
-				</div>
-				<div>
-					About
-				</div>
-			</nav>
+			<div class="MenuContainer">
+					<a href="#">New Game</a> |
+					<a href="#">Open Game</a> |
+					<a href="#">Settings</a> |
+					<a href="SetUp.html">Set Up</a> |
+					<a href="#">About</a>
+			</div>
 			<div>
 				this is a test
 			</div>
