--- a/jsShisenSho/index.html
+++ b/jsShisenSho/index.html
@@ -20,9 +20,15 @@
 					<a href="SetUp.html">Set Up</a> |
 					<a href="#">About</a>
 			</div>
-			<div>
+			<div id="divGameContainer">
+			<div class="GamePiece1">
 				this is a test
 			</div>
+			<div class="GamePiece1">
+				&nbsp;
+			</div>
+			</div>
+			<img src="images/tilesets/TileSet2.png" alt="tileset"/>
 			<footer>
 				<p>
 					&copy; Copyright  by andy
