--- a/GameServerTracker/PHP/template.html
+++ b/GameServerTracker/PHP/template.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
 <html class="no-js">
-<!--<![endif]-->
-<head>
+  <!--<![endif]-->
+  <head>
     <meta content="text/html; charset=utf-8" http-equiv="content-type">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title></title>
@@ -16,35 +16,34 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/layout.css">
     <link href="http://fonts.googleapis.com/css?family=Finger+Paint%7CIceland%7CWarnes%7CDiplomata+SC"
-        rel="stylesheet" type="text/css">
+
+      rel="stylesheet" type="text/css">
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>        <![endif]-->
     <!-- Add your site or application content here -->
     <div id="documentSection">
-        <section id="headerSection" style="padding: 5px 0px 0px 0px; display: block; height:65px; border-bottom-style: double; border-bottom-width: 4px; border-bottom-color: #000000;">
-            <div id="headerLeft" style="float: left; width: 450px; text-align: right; display: block; height: 100%; vertical-align: bottom;">
-                <div id="headerLogoText">Game Server Tracker</div>
-            </div>
-            <div id="headerRight" style="width: auto; height: 100%; ">
-                <div id="headerTopRight">
-                    Player Issue and Ban Tools
-                </div>
-                <div id="headerMenu" style="height: 20px;">Menu | Item #1 | Item #2 | Item #3 | Item #4</div>
-            </div>
-        </section>
-        <section id ="bodySection"
-        style="clear: both; height: 100%"> <h3>Body</h3></section>
-        <section id="footerSection" style="height: 55px; display: block; clear: both;">
-            Footer Section Place
-        Holder
-        </section>
+      <section id="headerSection">
+        <div id="headerLeft">
+          <div id="headerLogoText">Game Server Tracker</div>
+        </div>
+        <div id="headerRight">
+          <div id="headerTopRight" style="position: relative; bottom: 0px; width: auto; font-size: 22px; font-weight: bold; font-style: italic; font-variant: small-caps; vertical-align: bottom; text-align: left; font-family: Cambria;"> Player Issue and Ban Tools </div>
+          <div id="headerMenu">Menu | Item #1 | Item #2 |
+            Item #3 | Item #4</div>
+        </div>
+      </section>
+      <section id="bodySection" style="clear: both; height: 100%">
+        <h3>Body</h3>
+      </section>
+      <section id="footerSection" style="height: 55px; display: block; clear: both;">
+        Footer Section Place Holder </section>
     </div>
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
     <script src="js/plugins.js"></script>
     <script src="js/main.js"></script>
-</body>
+  </body>
 </html>
