--- a/GameServerTracker/PHP/template.html
+++ b/GameServerTracker/PHP/template.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
@@ -15,8 +15,7 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/layout.css">
-    <link href="http://fonts.googleapis.com/css?family=Finger+Paint%7CIceland%7CWarnes%7CDiplomata+SC"
-
+    <link href="http://fonts.googleapis.com/css?family=Finger+Paint%7CIceland%7CWarnes%7CDiplomata+SC"
       rel="stylesheet" type="text/css">
     <script src="js/vendor/modernizr-2.6.2.min.js"></script>
   </head>
@@ -30,9 +29,10 @@
           <div id="headerLogoText">Game Server Tracker</div>
         </div>
         <div id="headerRight">
-          <div id="headerTopRight" style="position: relative; bottom: 0px; width: auto; font-size: 22px; font-weight: bold; font-style: italic; font-variant: small-caps; vertical-align: bottom; text-align: left; font-family: Cambria;"> Player Issue and Ban Tools </div>
-          <div id="headerMenu">Menu | Item #1 | Item #2 |
-            Item #3 | Item #4</div>
+          <div id="headerTopRight" style="width: auto; font-weight: bold; font-style: italic; font-variant: small-caps; text-align: left; font-family: Cambria;">
+            Player Issue and Ban Tools </div>
+          <div style="overflow: hidden;" id="headerMenu"> <span style="border-style: none; display: inline;">Item
+              #1 | Item #2 | Item #3 | Item #4</span></div>
         </div>
       </section>
       <section id="bodySection" style="clear: both; height: 100%">
